zazr-test: the JPMS module dev.zazr.test (#184)
Closes #182.

`zazr-test` gets a real `module-info.java`:

```java
module dev.zazr.test {
    requires transitive dev.zazr;

    exports dev.zazr.test;
    exports dev.zazr.test.laws;
}
```

- Without it, the module name on the module path came from the jar name
(`zazr.test`). The name is now fixed at `dev.zazr.test`. The jar's
`Bundle-SymbolicName` was already `dev.zazr.test`.
- The module has no internal package. `Runner`, `Sampling` and `Shapes`
are package-private in `dev.zazr.test`.
- Its tests now run on the module path. `GenTypesTest` looks at the
fields of `Queue`, `Stream` and `Vector`, so `zazr-test/pom.xml` sets
surefire's `argLine` to open `dev.zazr.collection` and
`dev.zazr.collection.internal` to `dev.zazr.test`. The coverage
profile's JaCoCo agent is prepended to that `argLine`.
- `ModulePathConsumerTest`:
- reads the compiled descriptor: a named module, exporting exactly the
two packages, requiring `dev.zazr` transitively;
- writes a `consumer` module that only says `requires dev.zazr.test;`,
compiles it with the JDK's `javac` and runs it with `java`, on a module
path holding the two Zazr modules only;
- the consumer runs a `Check.check`, uses `dev.zazr.collection.Vector`
through the transitive dependency, and prints `MapLaws.all()`. The test
asserts the exact output.
- `docs/testing.md` gets one sentence: `requires dev.zazr.test;` for
modular tests, which reads `dev.zazr` too. Design section 4 records the
decision in the module table.

`make verify` and strict `make site` are green.